2012-09-26  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.util.def (grub-mknetdir): Move to $prefix/bin.
	Reported by: Daniel Kahn Gillmor.  Fixes Debian bug #688799.

2012-09-26  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (is_path_readable_by_grub): Redirect
	errors from grub-probe to /dev/null, not stdout.

2012-09-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_mount): Support AFFS bootblock in
	sector 1.

2012-09-24  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.in: Make the error message if $source_dir
	doesn't exist more useful.

2012-09-22  Colin Watson  <cjwatson@ubuntu.com>

	Fix grub-emu build on FreeBSD.

	* Makefile.util.def (grub-mount): Add LIBGEOM to ldadd.
	* grub-core/net/drivers/emu/emunet.c: Only include Linux-specific
	headers on Linux.
	(GRUB_MOD_INIT): Return immediately on non-Linux platforms; this
	implementation is currently Linux-specific.
	* util/getroot.c (exec_pipe): Define only on Linux or when either
	libzfs or libnvpair is unavailable.
	(find_root_devices_from_poolname): Remove unused path variable.

2012-09-19  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/partmap/msdos.c (pc_partition_map_embed): Revert
	incorrect off-by-one fix from 2011-02-12.  A 62-sector core image
	should fit before end == 63.

2012-09-19  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-setup.c (write_rootdev): Remove unused core_img
	parameter.  Update all callers.
	(setup): Define core_sectors only if GRUB_SETUP_BIOS, to appease
	'gcc -Wunused-but-set-variable'.  Remove unnecessary nested #ifdef
	GRUB_SETUP_BIOS.

2012-09-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig_lib.in (grub_tab): New variable.
	(grub_add_tab): New function.
	* util/grub.d/10_hurd.in: Replace \t with $grub_tab orgrub_add_tab.
	* util/grub.d/10_illumos.in: Likewise.
	* util/grub.d/10_kfreebsd.in: Likewise.
	* util/grub.d/10_linux.in: Likewise.
	* util/grub.d/10_netbsd.in: Likewise.